--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Ricardo\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-305496290.properties
+deploy.ant.properties.file=/home/thiago/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-1880667305.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Program Files/NetBeans 8.2/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/Program Files/NetBeans 8.2/glassfish4/glassfish
-j2ee.server.instance=[C:\\Program Files\\NetBeans 8.2\\glassfish4\\glassfish;C:\\Program Files\\NetBeans 8.2\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/NetBeans 8.2/glassfish4
+j2ee.server.domain=/home/thiago/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/home/thiago/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/home/thiago/glassfish-4.1.1/glassfish:/home/thiago/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/thiago/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Ricardo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/thiago/.netbeans/8.2/build.properties
