Cadastrando com data de nascimento

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -11,3 +11,12 @@ libs.javaee-endorsed-api-7.0.classpath=\
 libs.javaee-endorsed-api-7.0.displayName=Java EE 7 Endorsed API Library
 libs.javaee-endorsed-api-7.0.javadoc=\
     ${base}/javaee-endorsed-api-7.0/javaee-doc-api.jar
+libs.JavaMail.classpath=\
+    ${base}/../../Contato/Email LocalHost/mail.jar;\
+    ${base}/../../Contato/Email LocalHost/javamail-1.4.7/lib/dsn.jar;\
+    ${base}/../../Contato/Email LocalHost/javamail-1.4.7/lib/gimap.jar;\
+    ${base}/../../Contato/Email LocalHost/javamail-1.4.7/lib/imap.jar;\
+    ${base}/../../Contato/Email LocalHost/javamail-1.4.7/lib/mailapi.jar;\
+    ${base}/../../Contato/Email LocalHost/javamail-1.4.7/lib/pop3.jar;\
+    ${base}/../../Contato/Email LocalHost/javamail-1.4.7/lib/smtp.jar
+libs.JavaMail.displayName=JavaMail
