--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mail.jar=..\\Contato\\Email LocalHost\\javamail-1.4.7\\mail.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.47-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
