--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /nbproject/private/
 /build/
 /dist/
+src/java/modelDAO/Conecta.java
+src/java/controller/BuscaServlet.java
+src/java/modelDAO/Conecta.java
+src/java/modelDAO/Conecta.java
+src/java/modelDAO/Conecta.java
