--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
+file.reference.mail.jar=lib\\mail.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
