--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.2.jar=lib\\commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.5.jar=lib\\commons-io-2.5.jar
 file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
+file.reference.mail.jar=lib\\mail.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +48,10 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.commons-fileupload-1.3.2.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
