--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ excludes=
 file.reference.commons-fileupload-1.3.2.jar=lib\\commons-fileupload-1.3.2.jar
 file.reference.commons-io-2.5.jar=lib\\commons-io-2.5.jar
 file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
+file.reference.jackson-all-1.9.0.jar=..\\..\\..\\Desktop\\jackson-all-1.9.0.jar
 file.reference.mail.jar=lib\\mail.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
 includes=**
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.commons-fileupload-1.3.2.jar}:\
-    ${file.reference.commons-io-2.5.jar}
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.jackson-all-1.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
