--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-/nbproject/private/
-/build/
-/dist/
-src/java/modelDAO/Conecta.java
-src/java/controller/BuscaServlet.java
-src/java/modelDAO/Conecta.java
-src/java/modelDAO/Conecta.java
-src/java/modelDAO/Conecta.java
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
