--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
 
-deploy.ant.properties.file=C:\\Users\\vinim\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1585228774.properties
+deploy.ant.properties.file=C:\\Users\\thiag\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1222938978.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/vinim/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+j2ee.server.domain=D:/Program Files (x86)/GlassFish1/glassfish5/glassfish/domains/domain1
+j2ee.server.home=D:/Program Files (x86)/GlassFish1/glassfish5/glassfish
+j2ee.server.instance=[D:\\Program Files (x86)\\GlassFish1\\glassfish5\\glassfish;D:\\Program Files (x86)\\GlassFish1\\glassfish5\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=D:/Program Files (x86)/GlassFish1/glassfish5
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\vinim\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\thiag\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
