--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,12 @@
 
 
-deploy.ant.properties.file=C:\\Users\\Elaine\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3343268459.properties
+deploy.ant.properties.file=C:\\Users\\vinim\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1585228774.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Program Files/glassfish5/glassfish/domains/personal
-j2ee.server.home=C:/Program Files/glassfish5/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish5\\glassfish;C:\\Program Files\\glassfish5\\glassfish\\domains\\personal]deployer:gfv3ee6wc:localhost:11201
-j2ee.server.middleware=C:/Program Files/glassfish5
+j2ee.server.domain=C:/Users/vinim/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Elaine\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\vinim\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
