--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,7 +6,7 @@ j2ee.server.domain=C:/Program Files/glassfish5/glassfish/domains/personal
 j2ee.server.home=C:/Program Files/glassfish5/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish5\\glassfish;C:\\Program Files\\glassfish5\\glassfish\\domains\\personal]deployer:gfv3ee6wc:localhost:11201
 j2ee.server.middleware=C:/Program Files/glassfish5
-selected.browser=Chrome
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Elaine\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
